# wanwu

./: .env.bak  .env.image.amd64  .env.image.amd64.cn  .env.image.arm64  .gitignore  Dockerfile.agent  Dockerfile.agent-base  Dockerfile.backend  Dockerfile.frontend  Dockerfile.rag  Makefile  Makefile.develop  NOTICE  README.md  README_CN.md  README_繁體.md  docker-compose-develop.yaml  docker-compose.yaml  go.mod  go.sum
agent/agent_open_source/: .gitignore  README.md  bing_plus.py  config.ini  doc_pra.py  http_action_server.py  log.config  logging_config.py  mcp_client.py  netsearch_server.py  pyproject.toml  requirements.txt  server_open.py  start.sh  start_all.sh  startdoc.sh  startnet.sh  testdoc.py  testnet.py  testnew.py
agent/agent_open_source/.ipynb_checkpoints/: bing_plus-checkpoint.py  config-checkpoint.ini  netsearch_server-checkpoint.py  requirements-checkpoint.txt  server_open-checkpoint.py  startnet-checkpoint.sh  test-checkpoint.py  testnet-checkpoint.py
agent/agent_open_source/agent_plugin/: .gitignore  action.py  config.ini  config.py  gitignore  http_action_server.py  log_config.py  start_action_server.sh
agent/agent_open_source/agent_plugin/utils/: auth.py  generator.py  langchain_unicomai.py  (+2 more)
agent/agent_open_source/minio/: b.txt  file_pra.py  minio_open.py  startminio.sh  startpra.sh  startstr.sh  str_minio.py  test-str.py  test_minio.py  testdoc.py
agent/agent_open_source/utils/: bm25.py  bocha_search.py  build_prompt.py  custom_web_loader.py  llm_tools.py  model_loader.py  model_tools.py  output_parser.py  rerank.py  tokenizers.py  uni_id.py
(+1157 files in other folders)
