[project]
name = "mcp-server-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-deepseek>=0.1.3",
    "langchain-mcp-adapters>=0.0.8",
    "langchain-openai>=0.3.13",
    "langgraph>=0.3.30",
    "mcp[cli]>=1.6.0",
]
